--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <title>Dictionary</title>
@@ -31,7 +31,7 @@
                 </div>
               </form>
             </div>
-            <input type="submit" value="Add Word" class="btn submitForm">
+            <button type="submit" class="btn submitForm">Add Word <i class="fas fa-plus"></i></button>
 
           </div>
           <div class="card-action">
@@ -49,10 +49,9 @@
               </thead>
 
               <tbody>
-
               </tbody>
             </table>
-            <a href="#" class="clear-dictionary btn black">Clear Dictionary</a>
+            <a href="#" class="clear-dictionary btn red darken-1">Clear Dictionary</a>
           </div>
         </div>
       </div>
@@ -60,20 +59,45 @@
   </div>
 
   <div class="fixed-action-btn">
-    <a class="btn-floating btn-large red">
+    <a class="btn-floating btn-large #26a69a">
       <i class="fas fa-cog"></i>
     </a>
     <ul>
-      <li><a class="btn-floating red"><i class="fas fa-redo"></i></a></li>
-      <li><a class="btn-floating yellow darken-1"><i class="fas fa-info"></i></a></li>
-      <li><a class="btn-floating green"><i class="material-icons">ع</i></a></li>
+      <li><a class="btn-floating red modal-trigger" href="#modal2"><i class="fas fa-redo"></i></a></li>
+      <li><a class="btn-floating yellow darken-1 modal-trigger" href="#modal1"><i class="fas fa-info"></i></a></li>
     </ul>
+  </div>
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Dictionary App <i class="fas fa-book-reader"></i></h4>
+      <p>A Dictionary App Created Using Just Vanilla Javascript and Materialize CSS</p>
+    </div>
+  </div>
+  <div id="modal2" class="modal red accent-3 white-text">
+    <div class="modal-content">
+      <h4>Warning</h4>
+      <p>You Are About To Delete Everything. Are you Sure You Want To Continue?</p>
+    </div>
+    <div class="modal-footer red accent-3">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat white-text" id="yes">YES</a>
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat white-text" id="no">NO</a>
+    </div>
   </div>
 
   <script src="https://kit.fontawesome.com/8027935937.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
     crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      var elems = document.querySelectorAll('.modal');
+      var instances = M.Modal.init(elems);
+    });
+    document.addEventListener('DOMContentLoaded', function () {
+      var elems = document.querySelectorAll('.fixed-action-btn');
+      var instances = M.FloatingActionButton.init(elems);
+    });
+  </script>
   <script src="app.js"></script>
 </body>
 
